                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 16-04-2005 fixed: Left + Down on left thumb stick wasn't working correctly.
  - 16-04-2005 changed: SetViewPort()/RestoreViewPort() done in the control rather than by the visualisation.  Should hopefully eliminate the "flickering screen on homepage" issue.
  - 16-04-2005 fixed: Possible crash in Video database views if the listcontrol had the wrong id.
  - 16-04-2005 fixed: audioscrobbler status was only updated when restarting after settings change
  - 16-04-2005 updated: Norwegian language file (Thnx to vnm)
  - 16-04-2005 fixed: Mute dialog was not allocated, and thus not rendered.
  - 16-04-2005 fixed: [ 1182782 ] Default mode for Digital output should be Stereo
  - 15-04-2005 updated: Norwegian language file (Thnx to vnm)
  - 15-04-2005 fixed: CUtil::URLEncode ignored '&' and '='
  - 15-04-2005 added: selectItem method to ControlList for python, thanks to sambarza.
  - 15-04-2005 updated: German language file
  - 15-04-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 15-04-2005 fixed: Double linebreak in TextBox caused repeated lines.
  - 15-04-2005 added: New built in function XBMC.EjectTray for opening/closing the dvd tray.
  - 15-04-2005 fixed: Adjust Frame Rate and PAL60 clash on 25fps files. 
  - 15-04-2005 added: audioscrobbler support
  - 15-04-2005 fixed: kai, crash when friend has no avatar
  - 15-04-2005 added: patch [ 1178392 ] Proxy support for shoutcast thanks to soepy.
  - 15-04-2005 fixed: bug [ 1180705 ] Empty Files and illegal fatx file names on SMB Server stops copy Process.
  - 15-04-2005 fixed: Togglebuttons weren't scaled on the fly correct (VideoOSD in PAL60 mode).