@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 16-04-2005 fixed: PAPlayer FF/RW when id3 reading is turned off. Opening to timeoffset initial code.
   - 16-04-2005 fixed: Left + Down on left thumb stick wasn't working correctly.
   - 16-04-2005 changed: SetViewPort()/RestoreViewPort() done in the control rather than by the visualisation.  Should hopefully eliminate the "flickering screen on homepage" issue.
   - 16-04-2005 fixed: Possible crash in Video database views if the listcontrol had the wrong id.
